--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,5 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,git,jupyternotebooks
 {"mode":"full","isActive":false}
+config.py
+Jupyter_Notebooks/Modeling_copy.ipynb
