--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,18 @@ theme: jekyll-theme-minimal
     ...
   </div>
 </div>
-nav class="sidebar-nav">
+<div class="sidebar">
+  <div class="container sidebar-sticky">
+    <div class="sidebar-about">
+      <h1>
+        <a href="{{ site.baseurl }}">
+          {{ site.title }}
+        </a>
+      </h1>
+      <p class="lead">{{ site.description }}</p>
+    </div>
+
+    <nav class="sidebar-nav">
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
 
       {% comment %}
@@ -26,9 +37,7 @@ nav class="sidebar-nav">
       <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
       <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
     </nav>
-<!-- Modified sidebar -->
-<div class="sidebar">
-  <div class="container">
-    ...
+
+    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
   </div>
 </div>
