Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-dinky
+theme: jekyll-theme-architect
 title: [Classification 
           Analysis]
 description: [A short description of your site's purpose]
