making readme changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 title: [Classification 
           Analysis]
-description: [A short description of your site's purpose]
+description: [Dell 1 Capstone Project]
