--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-description: [Fannie Mae Loan Default Prediction]
+description: [https://capstone-classification-app.herokuapp.com/]
