Revert "testing hyperlink"
This reverts commit 14eefde16fb8d306c99d157c6e286fefbd94b7cd.

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-description: [https://capstone-classification-app.herokuapp.com/]
+description: [Fannie Mae Loan Default Prediction]
