--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,4 @@ Text_Files/discard_cols.txt
 TP_Capstone_Deliverable/.DS_Store
 TP_Capstone_Deliverable/.vscode/settings.json
 TP_Capstone_Deliverable/schema
+README2.md
